# EV-Vehicle-charge-demand

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.template.json  demo_ev_workflow.py  demo_user_guidance.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_github_test.py  simple_test.py  standalone_github_test.py  test_file_manager_demo.py  test_github_import.py  test_task8_integration.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: config.development.json  config.production.json  config.staging.json
deployment/docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md  INSTALLATION.md  USER_GUIDE.md  user_guidance_system.md
scripts/: deploy.py  install.py
src/: __init__.py
src/cli/: __init__.py  base_cli.py  help_system.py  workflow_cli.py
src/models/: __init__.py  interfaces.py  workflow_models.py
src/services/: __init__.py  file_manager.py  github_service.py  lms_integration.py  progress_store.py  submission_service.py  user_guidance.py  validation_service.py  workflow_core.py  workflow_steps.py
src/ui/: dashboard.py
src/utils/: config.py  config_validator.py  logging_config.py
tests/: test_cli.py  test_code_dataset_management.py  test_file_manager.py  test_github_service.py  test_github_workflow.py  test_help_system.py  test_integration_e2e.py  test_lms_integration.py  test_progress_store.py  test_project_initialization.py  test_submission_service.py  test_user_guidance.py  test_validation_service.py  test_validation_service_basic.py  test_workflow_core.py
